--- a/src/courier/CustomerOrderTable.form
+++ b/src/courier/CustomerOrderTable.form
@@ -44,10 +44,10 @@
                   <Component id="jScrollPane1" min="-2" pref="684" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="label2" min="-2" pref="114" max="-2" attributes="0"/>
-                          <Component id="label1" min="-2" max="-2" attributes="0"/>
+                          <Component id="label1" min="-2" pref="430" max="-2" attributes="0"/>
+                          <Component id="label2" min="-2" pref="340" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="398" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
                       <Component id="neworderbtn" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -94,7 +94,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="35" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Order"/>
+        <Property name="text" type="java.lang.String" value="Order &amp; Delivery"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="label2">
@@ -102,7 +102,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Your Order"/>
+        <Property name="text" type="java.lang.String" value="Customer Recent Order and Delivery"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
