--- a/src/courier/ManagingStaffDasboard.form
+++ b/src/courier/ManagingStaffDasboard.form
@@ -150,6 +150,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Report"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton6ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="assignbtn">
       <Properties>
